--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "md5": "^2.1.0",
-    "mongodb": "^2.1.16"
+    "mongodb": "^2.1.16",
+    "node-sass": "^3.10.0"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
